--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
+      <img src="assets/img/logo.png" alt="">
       <h1 class="sitename">Aswin Rajeev</h1>
     </a>
 
@@ -69,7 +68,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <!-- <img src="assets/img/heroBg.jpg" alt="" data-aos="fade-in" class=""> -->
+      <img src="assets/img/heroBg.jpg" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Aswin Rajeev</h2>
