--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <!-- <img src="assets/img/Profile02.jpg" class="img-fluid" alt=""> -->
+           <img src="assets/img/Profile02.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Web Developer.</h2>
@@ -204,7 +204,7 @@
         <h2>Resume</h2>
         <p>To become a part of an organization eager to work with individuals and large businesses alike, maintaining the highest standards in the best interest of all parties</p>
         <br>
-        <a href="assets/ASWIN CV.pdf"><button class="btn btn-dark">Download CV</button></a>
+        <a href=""><button class="btn btn-dark">Download CV</button></a>
       </div><!-- End Section Title -->
 
       <div class="container">
