--- a/index.html
+++ b/index.html
@@ -405,10 +405,11 @@
           </div>
 
           <div class="col-lg-7">
-            <form id="contactform" class="form" action="/" method="post">
+            <form id="contactform" class="form" action="https://api.web3forms.com/submit" method="POST">
               <div class="row gy-4">
 
                 <div class="col-md-6">
+                  <input type="hidden" name="access_key" value="9f4fa8dc-4f3d-4045-8301-341e340fe89b">
                   <label for="username" class="pb-2">Your Name</label>
                   <input type="text" name="name" id="username" class="form-control">
                   <span class="text-danger" id="username_error"></span>
